<resources>
    <string name="cancel">取消</string>
    <string name="complete">确定</string>
    <string name="message_notification">提醒</string>
    <string name="share_with_friends">分享给好友</string>
    <string name="version_update">版本更新</string>
    <string name="setting">设置</string>
    <string name="home">首页</string>
    <string name="Charity_mission">慈善任务</string>
    <string name="not_filled">未填写</string>
    <string name="phone">手机:</string>
    <string name="please_enter_the_phone_number">请输入手机号</string>
    <string name="password">密码:</string>
    <string name="please_enter_the_password">请输入密码(6-20位数字或字母)</string>
    <string name="please_enter_the_password1">请输入密码</string>
    <string name="login">登录</string>
    <string name="forgot_password">忘记密码</string>
    <string name="birthday">生日</string>
    <string name="mobile_phone_photo_album_to_choose">手机相册选择</string>
    <string name="taking_pictures">拍照</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="save">保存</string>
    <string name="Please_enter_a_new_mobile_phone_number">请输入新的手机号</string>
    <string name="Please_enter_the_verification_code">请输入验证码</string>
    <string name="Get_verification_code">获取验证码</string>
    <string name="Verification_code_error">验证码错误</string>
    <string name="Invite_code">邀请码:</string>
    <string name="Invite_codes">邀请码</string>
    <string name="Next_time_can_only_be_used_to_replace_the_mobile_phone_to_log_in">下次登录只能使用手机号登录</string>
    <string name="submit">提交</string>
    <string name="Submit_a_screenshot">提交截图</string>
    <string name="clean_up_the_complete">清理完成</string>
    <string name="remind">提醒:</string>
    <string name="Mobile_phone_registered">手机注册</string>
    <string name="To_resend">重新发送</string>
    <string name="Log_out">退出登录</string>
    <string name="signature">个性签名</string>
    <string name="profession">职业</string>
    <string name="education_background">学历</string>
    <string name="nickname">昵称</string>
    <string name="Head_portrait">头像</string>
    <string name="phone_number">手机账号</string>
    <string name="My_topic">我的话题</string>
    <string name="setting_up">设置</string>
    <string name="have">有</string>
    <string name="not_have">无</string>
    <string name="Set_head">设置头像</string>
    <string name="click_on_the_download">点击下载</string>
    <string name="download">下载</string>
    <string name="No_downloadable_applications_please_feedback_to_the_platform">暂时没有任务哦..</string>
    <string name="To_download">加入下载</string>
    <string name="The_installation">安装</string>
    <string name="Download_failed_to_download">下载失败重新下载</string>
    <string name="Continue_to_download">继续下载</string>
    <string name="start">开始</string>
    <string name="start_task">开始任务</string>
    <string name="Mission_requirements">任务说明:</string>
    <string name="Mission_requirementss">任务说明</string>
    <string name="Version_update">版本更新</string>
    <string name="Customer_service_telephone">客服电话</string>
    <string name="circle">圈子</string>
    <string name="donations">捐赠</string>
    <string name="results">财报</string>
    <string name="Submit_orders">提交订单</string>
    <string name="Submit_orders_failure">提交订单失败</string>
    <string name="registered">注册</string>
    <string name="Forgot_passwords">忘记密码</string>
    <string name="directory">目录</string>
    <string name="To_reset_your_password">重置密码</string>
    <string name="Please_enter_a_new_password">请输入新密码(6-20)位数字或字母)</string>
    <string name="Sure_you_want_to_change_a_phone_number">确定要更换手机号?</string>
    <string name="In_the_download">下载中...</string>
    <string name="travel_the_task">出游任务</string>
    <string name="Ring_main_task">圈主任务</string>
    <string name="Hlep_Ring_Main_task">帮圈主做任务</string>
    <string name="task">任务</string>
    <string name="chat">聊天乐园</string>
    <string name="To_score">赏个好评</string>
    <string name="The_title_will_be">标题(必填)</string>
    <string name="Sent_to_the_circle">发送到圈子:</string>
    <string name="Has_raise_money">成功帮助:</string>
    <string name="Apply_for_help">需要帮助:</string>
    <string name="The_target">目标:</string>
    <string name="search">搜索</string>
    <string name="The_recommended_circle">推荐的圈</string>
    <string name="send">发送</string>
    <string name="Can_only_choose_sheets">最多只能选择</string>
    <string name="Enter_the_circle">进入圈子</string>
    <string name="Circle_the_main">圈主</string>
    <string name="Search_the_scene">没有搜到该圈子</string>
    <string name="Has_joined">已加入</string>
    <string name="Kicked_out">踢出</string>
    <string name="voice">声音</string>
    <string name="vibration">震动</string>
    <string name="Comment_to_remind">评论提醒</string>
    <string name="Comment">评论</string>
    <string name="Love_to_leave_a_message">爱心留言</string>
    <string name="Set_the_circle_icon">设置圈图标</string>
    <string name="Introduction_to_the_circle">圈子简介</string>
    <string name="Circle_to_introduce_mandatory">圈介绍(必填)</string>
    <string name="Circle_to_introduce">圈介绍</string>
    <string name="The_body_of_the_mandatory">正文(必填)</string>
    <string name="achieve">完成</string>
    <string name="topic">话题</string>
    <string name="Please_enter_the_authentication_information">请输入验证信息(选填)</string>
    <string name="In_the_review">审核中</string>
    <string name="approved">审核通过</string>
    <string name="Audit_did_not_pass">审核未通过</string>
    <string name="Ring_back">退圈</string>
    <string name="collection">收藏</string>
    <string name="Members_of_the_circle">圈成员</string>
    <string name="Management_circles">管理圈子</string>
    <string name="share">分享</string>
    <string name="Outsiders_and_circle">外人加圈</string>
    <string name="ban">禁止</string>
    <string name="Do_not_ban">不禁止</string>
    <string name="Not_allowed_to_add">禁止外人加圈</string>
    <string name="After_check_the_outsiders_cannot_join_the_circle_make_sure_to_check">勾选后外人不能加入该圈,确定勾选吗?</string>
    <string name="balance">余额</string>
    <string name="money">金额(元)</string>
    <string name="Please_enter_the_amount">请输入金额</string>
    <string name="Please_input_the_correct_amount">请输入正确金额</string>
    <string name="Pay_treasure_to_account">支付宝账号</string>
    <string name="Submit_an_application">提交申请</string>
    <string name="Please_enter_the_alipay_account">请输入支付宝账号</string>
    <string name="Real_name">真实姓名</string>
    <string name="Please_enter_the_account_number_corresponding_to_real_name">请输入账号对应的真实姓名</string>
    <string name="Warm_prompt_Withdrawal_is_yuan_is_the_minimum_amount">温馨提示：提现最低金额为100元（收取10%手续费）</string>
    <string name="Sure_to_cancel_the_collection">确定取消收藏吗?</string>
    <string name="Consider_the">考虑一下</string>
    <string name="WeChat_public_no">微信公众号</string>
    <string name="Qr_code_card">二维码名片</string>
    <string name="dedication">爱心豆</string>
    <string name="innocuity_safety">安全无毒</string>
    <string name="Circle_of">圈名(必填)</string>
    <string name="If_you_leave_the_circle">你是否退出该圈子?</string>
    <string name="Mobile_phone_number_is_empty">手机号为空</string>
    <string name="Incomplete_information">信息填写不完整</string>
    <string name="Please_select_a_picture">头像忘记选了哦</string>
    <string name="Please_enter_a_nickname">请输入昵称</string>
    <string name="Nickname_16_characters_in_length">昵称长度在16字符以内</string>
    <string name="The_phone_number_has_been_registered">该手机号码已经注册</string>
    <string name="Password_length_is_wrong">密码长度不对哦</string>
    <string name="Registered_successfully">注册成功</string>
    <string name="Registered_failure">注册失败</string>
    <string name="Authorized_overtime">授权超时</string>
    <string name="Login_successful">登录成功</string>
    <string name="find_ciecle">找圈子</string>
    <string name="Please_provide_a_circle_name">请输入圈名</string>
    <string name="Account_or_password_error">账户或密码错误</string>
    <string name="Login_failure">登录失败，请稍后再试</string>
    <string name="Your_account_has_been_banned_login_please_contact_your_administrator">您的账号已被禁止登录，请联系管理员</string>
    <string name="No_WeChat_client_installed">没有安装微信客户端</string>
    <string name="Contribution_value">爱心豆</string>
    <string name="Has_donated">已帮助</string>
    <string name="Number_of_topics">话题数量</string>
    <string name="To_offer_the_compassion">献爱心</string>
    <string name="Already_collected">已收藏</string>
    <string name="yuan">元</string>
    <string name="Click_to_download">点击重新加载</string>
    <string name="from">来自</string>
    <string name="Task_to_complete">任务完成</string>
    <string name="My_circle">我的圈子</string>
    <string name="No_more">没有更多了</string>
    <string name="Image_upload_failure">网络较差,请重新尝试</string>
    <string name="To_join_the_circle_can_be_released">加入该圈才能发布话题</string>
    <string name="To_join_the_circle_can_be_launched_a_donation">加入该圈才能发起</string>
    <string name="To_join_the_circle_to_view_the_task">加入该圈才能查看任务</string>
    <string name="To_join_the_circle_to_enter_the_chat_room">加入该圈才能进入聊天室</string>
    <string name="To_join_the_circle_to_new_activities">圈主才能新增活动</string>
    <string name="Offer_value">爱心豆</string>
    <string name="circle_Offer_value">圈爱心豆</string>
    <string name="Circle_the_main_audit_has_passed">圈主审核：已通过</string>
    <string name="Circle_the_main_audit_review">圈主审核：审核中</string>
    <string name="Vote_audit_have_passed">投票、审核均已通过</string>
    <string name="Application_is_successful">加圈成功</string>
    <string name="The_circle_has_set_forbid_anyone_to_join_try_to_other_circle">该圈已设置禁止任何人加入，试试加入其他圈子吧！</string>
    <string name="Add_failure">未能添加成功，请稍后再试</string>
    <string name="Setup_failed">设置失败，请稍后再试</string>
    <string name="Changes_not_allowed_to_add_circle_of_success">允许外人加圈</string>
    <string name="Changes_not_allowed_to_add_circle_of_failed">禁止外人加圈</string>
    <string name="You_not_the_Lord_without_the_operating_authority">您不是圈主，无此操作权限</string>
    <string name="Collection_of_failure">收藏失败，请稍后再试</string>
    <string name="Collection_of_success">收藏成功</string>
    <string name="Kick_out_the_failure">踢出失败，请稍后再试</string>
    <string name="Kick_out_the_success">踢出成功</string>
    <string name="Circle_back_failure">退圈失败，请稍后再试</string>
    <string name="Circle_back_success">退圈成功</string>
    <string name="Creating_a_successful">创建成功</string>
    <string name="Creating">创建</string>
    <string name="Send_help">发帮助</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_failure">提交失败，请稍后再试</string>
    <string name="Exit_the_success">退出成功</string>
    <string name="Exit_the_failure">退出失败，请稍后再试</string>
    <string name="Lack_of_balance">余额不足</string>
    <string name="The_minimum_withdrawal_20_yuan">最低提现100元</string>
    <string name="Vote_success">投票成功</string>
    <string name="Failed_vote">投票失败，请稍后再试</string>
    <string name="Create_a_failure">创建失败，请稍后再试</string>
    <string name="Up_to_create_three_circles">最多创建三个圈</string>
    <string name="The_ring_has_been_occupied">该圈名已被占用</string>
    <string name="The_nickname_has_been_occupied">该名称已被占用</string>
    <string name="New_success">新增成功</string>
    <string name="New_failure">新增失败，请稍后再试</string>
    <string name="Title_at_least_4_40_words">标题必须在4-40字符内</string>
    <string name="Title_at_least_2_30_words">标题必须在2-30字符内</string>
    <string name="Head_set">圈头像没设置</string>
    <string name="circle_head">圈头像</string>
    <string name="Circle_name_must_be_in_the_range_of_1_to_16_characters">圈名必须在1-16字符范围内</string>
    <string name="Circle_content_must_be_in_the_range_of_5_to_60_characters">圈简介必须在5-60字符范围内</string>
    <string name="Please_select_a_circle">请选择圈子</string>
    <string name="Please_enter_the_target_amount">请输入目标金额</string>
    <string name="At_least_oh_love_beans">爱心豆最少10个哦</string>
    <string name="Send_the_task">发任务</string>
    <string name="experience">体验</string>
    <string name="questionnaire">问卷</string>
    <string name="top_up">充值</string>
    <string name="Beans_for">用豆兑换</string>
    <string name="activity">活动</string>
    <string name="withdrawal">提现</string>
</resources>