<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fifteen"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/album"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/press_button_bule_blue"
            android:layout_alignParentTop="true"
            android:text="@string/mobile_phone_photo_album_to_choose"
            android:textSize="@dimen/fifteen_thirteen"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/photograph"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/press_button_bule_blue"
            android:layout_below="@+id/album"
            android:textSize="@dimen/fifteen_thirteen"
            android:textColor="@color/white"
            android:text="@string/taking_pictures"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/ten"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/forty"
            android:background="@drawable/press_button_red_gray"
            android:layout_below="@+id/photograph"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/fifteen_thirteen"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_marginTop="@dimen/ten"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>