<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/cancelRelativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:alpha="0.4"
        android:background="@android:color/black" >

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/two_hundred_and_fifty"
        android:layout_height="@dimen/one_hundred_and_fifty"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/kuang_corners_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/thirty"
            android:text="@string/Not_allowed_to_add"
            android:textSize="@dimen/fifteen_thirteen"
            android:id="@+id/content"
            android:gravity="center"
            android:paddingLeft="@dimen/fifteen"
            android:paddingRight="@dimen/fifteen"
            android:textColor="@color/text_black"
            android:layout_marginTop="@dimen/eight"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty"
            android:layout_below="@+id/content"
            android:gravity="center"
            android:text="@string/After_check_the_outsiders_cannot_join_the_circle_make_sure_to_check"
            android:textSize="@dimen/twelve_ten"
            android:paddingLeft="@dimen/fifteen"
            android:paddingRight="@dimen/fifteen"
            android:textColor="@color/text_black"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/eight"
            android:id="@+id/textView68" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/xian_gray"
            android:id="@+id/imageView21"
            android:layout_below="@+id/textView68"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView68">

            <TextView
                android:id="@+id/center"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:gravity="center"
                android:textColor="@color/text_gray"
                android:textSize="@dimen/fifteen_thirteen"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/xian_gray"/>
            <TextView
                android:id="@+id/complete"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/complete"
                android:gravity="center"
                android:textColor="@color/text_red"
                android:textSize="@dimen/fifteen_thirteen"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>